# Surveillance-Robot-Ozorinho---ROS-code

./: .gitignore  README.md  comandos.txt
src/controle_Joy/serial_controller/: CMakeLists.txt  package.xml
src/controle_Joy/serial_controller/scripts/: joy.py
src/controle_Joy/serial_controller/src/: joy.cpp
src/img_reception/img_reception_intern/: CMakeLists.txt  package.xml
src/img_reception/img_reception_intern/scripts/: recepcao_imagem.py
src/img_reception/img_transmission_intern/: CMakeLists.txt  package.xml
src/img_reception/img_transmission_intern/scripts/: captura_transmissao_imagem.py
src/img_reception/vid_reception_ip/: CMakeLists.txt  package.xml
src/img_reception/vid_reception_ip/scripts/: vid_reception_ip.py
src/img_reception/vid_transmission_ip/: CMakeLists.txt  package.xml
src/img_reception/vid_transmission_ip/scripts/: vid_transmission_ip.py
src/launchrs/: CMakeLists.txt  package.xml
src/launchrs/config/: local_costmap_params.yaml
src/launchrs/launch/: controlarAutonomo.launch  controlarPeloControle.launch  detector.launch  testeMovimento.launch
src/launchrs/urdf/: modeloOsorin.urdf
src/launchrs/view/: view_slam.rviz
src/map/grid_map_controller/: CMakeLists.txt  package.xml
src/map/grid_map_controller/scripts/: main.py  teste.py
src/motion_planing_controller/: CMakeLists.txt  package.xml
src/motion_planing_controller/scripts/: enviaSerial.py
src/video_detector/: CMakeLists.txt  package.xml
src/video_detector/scripts/: detector.py
